Bug 1295622 - Don't crash the content process if a memory report fails. r=njn, a=lizzard